<resources>
    <string name="app_name">Book-Lovers-App</string>
    <string name="sign_up">Registro</string>
    <string name="sign_in">Login</string>

    <string name="name">Nombre de Usuario</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="have_an_account">¿Ya tienes una cuenta?</string>
    <string name="have_not_an_account">¿No tienes una cuenta? Registrate</string>

    <string name="name_error">error_nombre</string>
    <string name="name_error_no_update">error_mismo_nombre</string>
    <string name="email_error">error_email</string>
    <string name="email_doesnt_match">error_formato_email</string>
    <string name="email_error_no_update">error_mismo_email</string>
    <string name="password_error">error_password</string>
    <string name="password_error_less_than">Password debe ser mayor de 5 caracteres</string>

    <string name="update_profile">Actualizar Perfil</string>
    <string name="logout">Log Out</string>
    <string name="delete">Borrar Usuario</string>
    <string name="profile">Perfil</string>
    <string name="UserName">Nombre de Usuario</string>
    <string name="books">Libros</string>
    <string name="comics">Comics</string>
    <string name="login">Login</string>
    <string name="menuPrincipal">Menu Principal</string>
    <string name="createBook">Crear Libro</string>
    <string name="createComic">Crear Comic</string>
    <string name="listBooks">Ver Libros</string>
    <string name="listComics">Ver Comics</string>
    <string name="title">Comentario</string>
    <string name="author">Autor</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="theme">Tema</string>
    <string name="cancel">Cancel</string>
    <string name="title_error">El titulo no puede estar vacio</string>
    <string name="author_error">El autor no puede estar vacio</string>
    <string name="sinopsis_error">La sinopsis no puede estar vacia</string>
    <string name="theme_error">El tema no puede estar vacio</string>
    <string name="note">Nota</string>
    <string name="comments">Crear Comentario</string>
    <string name="returnToBookDetail">Volver al Libro</string>
    <string name="returnToComicDetail">Volver al Comic</string>
    <string name="comment">Comentario</string>
    <string name="nota">Nota</string>
    <string name="createComment">Crear Comentario</string>
    <string name="comment_error">El cuerpo del comentario es necesario, introduzca uno, por favor</string>
    <string name="note_error">Es necesario introducir una nota</string>
    <string name="list_comments">Lista de Comentarios</string>
    <string name="titleComment">Titulo del Comentario</string>
    <string name="userName">Usuario</string>
    <string name="rating">rating</string>
    <string name="chapters">Crear Capitulo</string>
    <string name="listChapters">Listar Capitulos</string>
    <string name="drawer_error">El dibujante no puede estar vacio</string>
    <string name="drawer">Dibujante</string>
    <string name="number">Numero</string>
    <string name="chapter_list">Lista de Capitulos</string>
    <string name="createChapter">Crear Capitulo</string>

    <string-array name="themes">
        <item>TERROR</item>
        <item>MYSTERY</item>
        <item>ADVENTURE</item>
        <item>ROMANCE</item>
        <item>HISTORY</item>
        <item>FANTASY</item>
    </string-array>
</resources>