<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="ui.BookDetailsActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:text="title"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"/>
            <TextView
                android:id="@+id/authorText"
                android:layout_width="match_parent"
                android:text="author"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"/>
            <TextView
                android:id="@+id/themeText"
                android:layout_width="match_parent"
                android:text="theme"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sinopsis"/>
            <TextView
                android:id="@+id/sinopsisText"
                android:layout_width="match_parent"
                android:text="sinopsis"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"/>
            <RatingBar
                android:id="@+id/ratingStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:numStars="10"
                android:stepSize="1"
                android:isIndicator="true" />

            <Button
                android:id="@+id/btComment"
                android:layout_marginTop="24dp"
                android:background="@drawable/gradient_bt"
                android:text="@string/comments"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btListComments"
                android:layout_marginTop="24dp"
                android:background="@drawable/gradient_bt"
                android:text="@string/list_comments"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>