<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.CreateComicActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:text="@string/createComic"
                android:textColor="@color/colorWhite"
                android:textSize="24dp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:padding="20dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title" />

                    <EditText
                        android:id="@+id/etTitleC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/author" />

                    <EditText
                        android:id="@+id/etAuthorC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/author" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sinopsis" />

                    <EditText
                        android:id="@+id/etSinopsisC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sinopsis" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/theme" />

                    <Spinner
                        android:id="@+id/spinnerC"
                        android:layout_width="333dp"
                        android:layout_height="49dp" />

                    <Button
                        android:id="@+id/btCreateComic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/gradient_bt"
                        android:text="@string/createComic"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/btCancelC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/gradient_bt"
                        android:text="@string/cancel"
                        android:textColor="@color/colorWhite" />

                    <Button
                        android:id="@+id/btMenuC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:background="@drawable/gradient_bt"
                        android:text="@string/menuPrincipal"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvLogoutC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardViewC"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/logout"
                android:textColor="@color/colorWhite" />

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>