<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bt"
    tools:context=".ui.ComicsMenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewComic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="24dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewComic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <Button
                    android:id="@+id/btListComics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/gradient_bt"
                    android:text="@string/listComics"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btCreateComic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/gradient_bt"
                    android:text="@string/createComic"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/gradient_bt"
                    android:text="@string/menuPrincipal"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>