<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.login.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UserName"/>

            <TextView
                android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:text="@string/UserName"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:text="@string/email"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btMenu"
                android:layout_marginTop="24dp"
                android:background="@drawable/gradient_bt"
                android:text="@string/menuPrincipal"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>